# flight-tracker-api

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
api/: __init__.py  config.py
api/adapters/: database.py
api/application/controllers/: __init__.py  user_controller.py
api/application/outputs/: user_output.py
api/application/use_cases/: __init__.py  user.py
api/domain/ports/: __init__.py  user_port.py
api/infrastructure/models/: user_model.py
api/infrastructure/repositories/: user_repository.py
migrations/versions/: 212e27070986_create_users_table.py  6d0b2ae6b166_.py
tests/: conftest.py
tests/helpers/: user.py
tests/integration/: test_get_user_by_id.py  test_get_users.py
